--- a/toDo
+++ b/toDo
@@ -1,19 +1,30 @@
--Email on order (and on admin page)
--Description on top of box instead of side
--tags
--(whats app) phone number required
--display of addresses
--on order admin side:
-    display name
-    display address
--categorisation or order(chronolical, address:quartier, bigOrder(>amount || >articleNumber), )
--on order admin:
-    can pick traitement, preparation, livraison, livree
--main admin:
-    CRUD other admin
--add provider on product
--multiple delete on category
--admin side:
-    section utilisateur
-        (nombres, commandes(nombres), addresse, numero, email)
--automate (email sent after 5 days if they didn't order yet)
+Not started:
+    -Email on order (and on admin page)
+    -display of addresses
+    -on order admin side:
+        display name
+        display address
+        can pick traitement, preparation, livraison, livree
+    -categorisation or order(chronolical, address:quartier, bigOrder(>amount || >articleNumber), )
+    -main admin:
+        CRUD other admin
+    -add provider on product
+    -multiple delete on category
+    -admin side:
+        section utilisateur
+            (nombres, commandes(nombres), addresse, numero, email)
+    -automate (email sent after 5 days if they didn't order yet)
+    -rayon nav ba at the bottom of main nav mar (in black)
+    -fix bug at order when it creates 2 instead of 1 
+____________________________________________________________________________________________________________________
+In process:
+    -tags
+    -
+
+
+
+____________________________________________________________________________________________________________________
+Completed:
+    -(whats app) phone number required
+    -Description on top of box instead of side
+    -
