--- a/toDo
+++ b/toDo
@@ -1,24 +1,30 @@
 Not started:
     -Email on order (and on admin page)
-    -display of addresses
-    -on order admin side:
+    e-display of addresses
+    e-on order admin side:
         display name
         display address
         can pick traitement, preparation, livraison, livree
-    -categorisation or order(chronolical, address:quartier, bigOrder(>amount || >articleNumber), )
+    e-categorisation or order(chronolical, address:quartier, bigOrder(>amount || >articleNumber), )
     -main admin:
         CRUD other admin
-    -add provider on product
+    e-add provider on product
     -multiple delete on category
     -admin side:
         section utilisateur
             (nombres, commandes(nombres), addresse, numero, email)
-    -automate (email sent after 5 days if they didn't order yet)
+    ?-automate (email sent after 5 days if they didn't order yet)
     -rayon nav ba at the bottom of main nav mar (in black)
-    -fix bug at order when it creates 2 instead of 1 
+    -fix bug at order when it creates 2 instead of 1
 ____________________________________________________________________________________________________________________
 In process:
-    -tags
+    -tags(left to do:
+        -create tags on Submit
+        -get tags from tags table
+        -put autocomplete on editProduct
+        -put tags on client index
+        -
+        )
     -
 
 
