--- a/toDo
+++ b/toDo
@@ -1,10 +1,6 @@
 Not started:
     -Email on order (and on admin page)
     e-display of addresses
-    e-on order admin side:
-        display name
-        display address
-        can pick traitement, preparation, livraison, livree
     e-categorisation or order(chronolical, address:quartier, bigOrder(>amount || >articleNumber), )
     -main admin:
         CRUD other admin
@@ -18,11 +14,8 @@ Not started:
     -fix bug at order when it creates 2 instead of 1
 ____________________________________________________________________________________________________________________
 In process:
-    -check if edit images work
     -tags(left to do:
-
         -implement search by tags
-
         -put tags on client index
         -manage tags
         )
@@ -37,3 +30,8 @@ Completed:
     -create tags on Submit
     -get tags from tags table
     -put autocomplete on editProduct
+    -check if edit images work
+    -on order admin side:
+        display name
+        display address
+        can pick traitement, preparation, livraison, livree
