--- a/toDo
+++ b/toDo
@@ -5,12 +5,10 @@ Not started:
     -main admin:
         CRUD other admin
 
-    -multiple delete on category
     -admin side:
         section utilisateur
             (nombres, commandes(nombres), addresse, numero, email)
     ?-automate (email sent after 5 days if they didn't order yet)
-    -rayon nav ba at the bottom of main nav mar (in black)
     -fix bug at order when it creates 2 instead of 1
     -put gabonese time instead of current
 ____________________________________________________________________________________________________________________
@@ -39,3 +37,5 @@ Completed:
         can pick traitement, preparation, livraison, livree
     -tags:
         -implement search by tags
+    -rayon nav bar at the bottom of main nav mar (in black)
+    -multiple delete on product
