--- a/toDo
+++ b/toDo
@@ -3,7 +3,9 @@ Not started:
     e-display of addresses
     e-categorisation or order(chronolical, address:quartier, bigOrder(>amount || >articleNumber), )
     -main admin:
-        CRUD other admin
+        -admin login
+        -admin user
+        -let main admin CRUD other admin
 
     -admin side:
         section utilisateur
@@ -11,6 +13,7 @@ Not started:
     ?-automate (email sent after 5 days if they didn't order yet)
     -fix bug at order when it creates 2 instead of 1
     -put gabonese time instead of current
+    -improve user profile
 ____________________________________________________________________________________________________________________
 In process:
     -tags(left to do:
