added task to toDo

--- a/toDo
+++ b/toDo
@@ -22,7 +22,7 @@ In process:
         )
 
     -add provider on product
-    -improve user profile
+    -improve user profile (edit admin order accordingly)
     -display of addresses
 
 
